modules/cli/src/test/resources/bad/disamb/globals/gprotocoldecl/GProtocolDecl01.scr
module bad.disamb.globals.gprotocoldecl.GProtocolDecl01;


global protocol Foo(role A, role B, role C)
{

}
